@@ -287,6 +287,9 @@ Release 0.20.205.0 - unreleased
 
     HADOOP-7715. Removed unnecessary security logger configuration. (Eric Yang)
 
+    HADOOP-7711. Fixed recursive sourcing of HADOOP_OPTS environment
+    variables (Arpit Gupta via Eric Yang)
+
     HDFS-2392. Dist with hftp is failing again. (Daryn Sharp via jitendra)
 
   IMPROVEMENTS
